Added DAAD debugger, for Spectrum and CPC
Added DAAD vocabulary extractor
Added hdf to ide/mmc raw converter
Added hdf support to MMC emulation
Allow text adventure keyboard also on CPC
Added support for more cyrillic characters on menu
Added Derby+ and Derby++ roms
Added Chloe MMU to ZX-Uno
Added AY Sheet

Improved footer:
-Footer now completely follows GUI Style
-Reordered cpu use, numbers in red when cpu use > 85%
-Now shows cpu temperature on Linux (and not only on Raspbian as before)

Improved Waveform window: now the wave adjusts automatically to the zxwindow size

Improved scale 0.75 function: now it has antialias

Improved hexadecimal editor:
-now it resizes view to window height

Fixed bug having more than 256 text to adventure keyboard words
Fixed bug on CPC vertical scrolling
Fixed segmentation fault bug when drawing CPC machine
Fixed segmentation fault bug when displaying first aid messages
Fixed bug redrawing zx80/81 display, with realvideo disabled, and menu char width less than 8
Fixed bug drawing menu window boxes when char width less than 8
Fixed zxvision left button handling: no longer sends enter when the user is dragging the window
Fixed machine names to be completely right: for example, "Spectrum 48k" becomes "ZX Spectrum 48k", etc
Fixed saving sprites when memory zone is not default zone


Version 7.2. 10 April 2019 - Neula edition


Improved menu environment:
-Added new menu window type: ZX Vision. GUI Windows can be moved, resized, scrolled, minimized, closed, and change the focus to the background
-Windows can be scrolled using mouse wheel
-Warning and Error window messages now show an animation
-Added first-aid help windows

Added Z80 assembler
Added setting to specify configuration file
Added key to save text windows contents to a file
Added setting to send a final space after every word in the osd adventure keyboard
Added Dandanator CPC emulation
Added machine Amstrad CPC 4128
Added CPC machines support to ZSF snapshots