@@ -21,6 +21,7 @@ Added support for more cyrillic characters on menu
 Added Derby+ and Derby++ roms
 Added Chloe MMU to ZX-Uno
 Added AY Sheet
+Added RetroMac Gui Style
 
 Improved footer:
 -Footer now completely follows GUI Style
